--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,17 @@
 
     <groupId>dev.roxxion</groupId>
     <artifactId>Api</artifactId>
-    <version>0.1.0</version>
+    <version>0.3.1</version>
     <packaging>jar</packaging>
 
     <name>Api</name>
 
     <description>Personal API for own plugins</description>
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>19</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    <url>https://roxxion.dev</url>
+    <url>https://hiojam.com</url>
 
     <build>
         <plugins>
@@ -68,8 +68,8 @@
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
-            <artifactId>spigot</artifactId>
-            <version>1.8.8-R0.1-SNAPSHOT</version>
+            <artifactId>spigot-api</artifactId>
+            <version>1.20-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
@@ -95,6 +95,13 @@
             <groupId>com.github.cryptomorin</groupId>
             <artifactId>XSeries</artifactId>
             <version>9.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
